After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673320 - Nodes in side tree should not expand on focus
Nodes in side tree should not expand on focus
Status: RESOLVED FIXED
Product: devhelp
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: devhelp-maint
devhelp-maint
Depends on:
Blocks:
 
 
Reported: 2012-04-01 21:31 UTC by Antono Vasiljev
Modified: 2013-02-15 11:32 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Antono Vasiljev 2012-04-01 21:31:47 UTC
I think that nodes in side tree should not automatically expand when they clicked or focused with keyboard. 

It's inconsistent with the rest of GNOME and this behavior getting annoying when you trying to move through list downside with keyboard. You want to get to next book but instead you getting into first node of next book.
Comment 1 Aleksander Morgado 2013-02-15 11:32:06 UTC
Fixed in e7d4c19f506a4f0e3bc41686a96a3975fada09de.

This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.